--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@edgestore/server": "^0.3.3",
     "@google/genai": "^1.13.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.5.0",
     "dotenv": "^16.4.7",
     "form-data": "^4.0.1",
     "formidable": "^3.5.2",
@@ -24,6 +25,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-calendly": "^4.4.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "three": "^0.173.0",
